# branchpredict

./: .gitignore  CMakeLists.txt  README.md  aliases.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
asm_tests/: predict_test.s
cpu/: branchpredictor.cpp  branchpredictor.h  cpu.cpp  cpu.h  instruction.cpp  instruction.h
gui/: gui_command_parser.cpp  gui_command_parser.h  gui_elements.cpp  gui_elements.h  gui_render.cpp  gui_render.h  helpers.cpp  instruction_box.cpp  instruction_box.h  instructionbox.cpp  instructionbox.h
loader/: loader.cpp  loader.h
parser/: lookup.cpp  lookup.h  parser.cpp  parser.h  token.h
